fix(css): white space;
- PD Org select label white space.

--- a/ckanext/canada/assets/internal/canada_internal.css
+++ b/ckanext/canada/assets/internal/canada_internal.css
@@ -687,6 +687,7 @@ body ul.xloader-log li.item.failure > i::after{
   display: block;
   flex: 0;
   padding-left: 15px !important;
+  white-space: nowrap;
 }
 .canada-pd-org-select-wrapper .recombinant-org-select-label-wrapper label{
   font-weight: bold !important;
